# codeowners-lsp

./: .codeowners-lsp.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOFF.md  README.md  SLACK_POST.md  test-lsp.sh
.github/workflows/: ci-cd.yml  ci.yml
benches/: testdata.rs
crates/codeowners-lsp/: Cargo.toml
crates/codeowners-lsp/benches/: testdata.rs
crates/codeowners-lsp/src/: lib.rs  main.rs  ownership.rs
crates/codeowners-lsp/src/commands/: files.rs  suggest.rs
crates/codeowners-parser/: Cargo.toml  README.md
crates/codeowners-parser/src/: lib.rs  ownership.rs  parser.rs  pattern.rs  validation.rs
src/: blame.rs  cli.rs  diagnostics.rs  file_cache.rs  github.rs  lookup.rs  main.rs  ownership.rs  parser.rs  pattern.rs  validation.rs
src/commands/: check.rs  config.rs  coverage.rs  fix.rs  fmt.rs  gha.rs  lint.rs  mod.rs  optimize.rs  suggest.rs  tree.rs  validate_owners.rs
test-workspace/.github/: CODEOWNERS
